# freedom-skills

./: .gitignore  .skillspector-baseline.yaml  AGENTS.md  README.md
.githooks/: pre-commit
.github/workflows/: skillspector.yml  validate-skills.yml
Roadmap/: README.md  ai-request-coach.md  freedom-tech-automation-inventory.md  freedom-tech-landscape.md  human-rights-freedom-tech-brainstorm.md  mission-oriented-roadmap.md  skill-auditor.md  skill-discovery-algorithm.md  skill-discovery-and-trust.md  skills-benchmark-strategy.md  skills-benchmarks-landscape.md
docs/: index.html
docs/Roadmap/: README.html  ai-request-coach.html  freedom-tech-automation-inventory.html  freedom-tech-landscape.html  human-rights-freedom-tech-brainstorm.html  mission-oriented-roadmap.html  skill-auditor.html  skill-discovery-algorithm.html  skill-discovery-and-trust.html  (+2 more)
qa/: filepizza_user_story_matrix.csv
research/: hrf-progress-report-draft-2026-07-01.md  skill-frontmatter-organization.md  wayback-archive-feature-audit.xlsx
scripts/: build_pages.py  run_skillspector.sh  validate_skills_ref.sh
site/: README.md  index.html  script.js  styles.css  validate.mjs
skills/miniscript/: SKILL.md  package-lock.json  package.json  pyproject.toml
skills/miniscript/references/: examples.md  official-reference.md  system-prompt.md
skills/miniscript/scripts/: compile_policy.mjs  minimermaid.py
skills/miniscript/tests/: test_compile_policy.mjs  test_minimermaid.py
tests/: test_gpg_skill.py  test_iroh_skill.py  test_openauspex_skill.py  test_roadmap_starter_skills.py
(+184 files in other folders)
